deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
      - name: movies
        image: ghcr.io/desecho/movies/movies:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
