deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - movies.desecho.org
    secretName: movies-tls
  rules:
  - host: movies.desecho.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: movies
            port:
              number: 80
