deployment/ingress_frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - moviemunch.org
      secretName: movies-frontend-tls
  rules:
    - host: moviemunch.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: movies-frontend
                port:
                  number: 80
